--- a/hundepasserapp.html
+++ b/hundepasserapp.html
@@ -84,7 +84,7 @@
         // den starte div til chaten og samle den ved høyre siden
         let chatDiv = document.getElementById("chats");
         chatDiv.innerHTML = "";
-        // para cada chat, cria um card
+        // for hver chat åpnes det i en egen card
         for (let key in chats) {
           let chat = document.createElement("div");
           chat.classList.add("chat-card");
